--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <input id="txt_name">
     <button onclick="s12()">Click Me</button>
     <script src="script.js"></script>
+    <select>
+      <option></option>
+    </select>
   </body>
 </html>
