--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <input id="txt_name">
-    <button onclick="s12()">Click Me</button>
-    <script src="script.js"></script>
-    <select>
-      <option></option>
-    </select>
-  </body>
-</html>
+<html><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>repl.it</title>
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <style>body{background: rgb(255,0,0);
+background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, rgba(0,24,255,1) 100%);}
+</style>
+</head>
+<body>
+  <input id="txt_name">
+  <button onclick="s12()">Click Me</button><br><Br>
+  <script src="script.js"></script>
+  <audio src="04 SAD!.mp3"></audio>
+  <select id="ddlViewBy">
+    <option>SAD!</option>
+    <option>Robbery</option>
+    <option>All Girls are the Same</option>
+  </select>
+
+</body></html>
