--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
     <option>Robbery</option>
     <option>All Girls are the Same</option>
   </select>
-
+  <button onclick="s12()">Click Me</button>
+  <button onclick="s13()">Click Me</button>
 </body></html>
