--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
     <option>All Girls are the Same</option>
   </select>
   <button onclick="playAudio()">Click Me1</button>
-  <button onclick="pauseAudio()">Click Me</button>
+  <button onclick="pauseAudio()">Click Me</button><br><br>
+  <p id="ipaddress" style="font-size: 0%;">N/A</p>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script>
+
+            $.getJSON("https://api.ipify.org?format=json", function (data) {
+
+                $("#ipaddress").html(data.ip);
+
+            })
+
+    </script>
 </body></html>
