--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
   <button onclick="playAudio()">Click Me1</button>
   <button onclick="pauseAudio()">Click Me</button><br><br>
   <p id="ipaddress" style="font-size: 0%;">N/A</p>
+  <p id="s34" style="line-height: .9;"></p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script>
