--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
     <option>SAD!</option>
     <option>Robbery</option>
     <option>All Girls are the Same</option>
+    <option>Suge</option>
   </select>
   <button onclick="playAudio()">Click Me1</button>
   <button onclick="pauseAudio()">Click Me</button><br><br>
