--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
   <select id="ddlViewBy">
     <option>SAD!</option>
     <option>Robbery</option>
-    <option>All Girls are the Same</option>
+    <option>All Girls are<Br>the Same</option>
     <option>Suge</option>
   </select>
   <button onclick="playAudio()">Click Me1</button>
