--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
   <select id="ddlViewBy">
     <option>SAD!</option>
     <option>Robbery</option>
-    <option>All Girls are<Br>the Same</option>
+    <option>All Girls are the Same</option>
     <option>Suge</option>
+    <option>Off The Rip</option>
   </select>
   <button onclick="playAudio()">Click Me1</button>
   <button onclick="pauseAudio()">Click Me</button><br><br>
