--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, rgba(0,24,255,1) 100%);}
 </style>
 </head>
-<body>
+<body onload="myFunction34()">
   <input id="txt_name">
   <button onclick="s12()">Click Me</button><br><Br>
   <script src="script.js"></script>
