--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
     <option>All Girls are the Same</option>
     <option>Suge</option>
     <option>Off The Rip</option>
+    <option>Bounce Back</option>
+    <option>Amercian Idiot</option>
   </select>
   <button onclick="playAudio()">Click Me1</button>
   <button onclick="pauseAudio()">Click Me</button><br><br>
