--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>repl.it</title>
+  <title>Music</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <style>body{background: rgb(255,0,0);
 background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, rgba(0,24,255,1) 100%);}
