--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -10,7 +9,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
 </head>
 <body onload="myFunction34()">
   <input id="txt_name">
-  <button onclick="s12()">Click Me</button><br><Br>
+  <button onclick="s12()">Click Me</button><br><br>
   <script src="script.js"></script>
   <audio id="myAudio">
     <source src="SAD.mp3" type="audio/mpeg">
@@ -26,7 +25,7 @@ background: linear-gradient(90deg, rgba(255,0,0,1) 25%, rgba(250,255,0,1) 49%, r
   </select>
   <button onclick="playAudio()">Click Me1</button>
   <button onclick="pauseAudio()">Click Me</button><br><br>
-  <p id="ipaddress" style="font-size: 0%;">N/A</p>
+  <p id="ipaddress" style="font-size: 0%;">136.56.42.240</p>
   <p id="s34" style="line-height: .9;"></p>
   <p id="longitude" style="font-size: 0%;"></p>
   <p id="Latitude" style="font-size: 0%;"></p>
